[gd_scene load_steps=7 format=3 uid="uid://dnlssr3d53l18"]

[ext_resource type="Script" path="res://Turret/turret.gd" id="1_8dyr8"]
[ext_resource type="PackedScene" uid="uid://kvlnsf1cxriv" path="res://Bullet/bullet.tscn" id="2_qk322"]
[ext_resource type="Texture2D" uid="uid://bdoxd3xps8sbu" path="res://icon.svg" id="3_t37cv"]
[ext_resource type="Script" path="res://Turret/turret_colldier.gd" id="4_3piw3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r0g2t"]
resource_local_to_scene = true
radius = 175.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2kei"]
size = Vector2(32, 22)

[node name="Turret" type="Area2D"]
script = ExtResource("1_8dyr8")
radius = 175.0
damage = 1.0
bullet_scene = ExtResource("2_qk322")
bullets_per_second = 1.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r0g2t")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_t37cv")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="Barrel" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Barrel"]
modulate = Color(0.431373, 0.431373, 0.431373, 1)
scale = Vector2(0.3, 0.074)
texture = ExtResource("3_t37cv")
offset = Vector2(65, 0)

[node name="FirePositions" type="Node2D" parent="Barrel"]

[node name="FirePosition" type="Marker2D" parent="Barrel/FirePositions"]
position = Vector2(39, 0)

[node name="TurretCollider" type="Area2D" parent="."]
script = ExtResource("4_3piw3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurretCollider"]
shape = SubResource("RectangleShape2D_r2kei")

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
